      ZEP: use the exissting NTP time formatting code.
      NTP: Fix p_ntp_time_fmt() using epoch 1/epoch 2 convention (RFC 4330).
      NTP: Update a field name with the RFC 5905 name (Origin Timestamp).
      IPv6 mobility: Modernize packet parsing and make fixes.
      IP6OPTS: Modernize packet parsing and make fixes.
      VXLAN: Add UDP port 8472 used by Linux as the default port.
    User interface:
      Add optional unit suffix on -C file size.
      Improve the handling of size suffixes for -C.
      Print errors for options -A, -x[x] and -X[X] (mutually exclusive).
      Print errors about -C, -G and -z options usage.
      For PCAP_ERROR_CAPTURE_NOTSUP, show the error message provided
        by libpcap for that error if it's non-empty.
      Update the -z option processing. Print "invalid option -- z" when it is.
    Other:
      Avoid race condition when receiving signal during shutdown.
      Always show the interface name in error messages when the
        interface can't be opened.
      Clean up the message shown if a -i flag is specified with an
        interface index that's too large.
    Source code:
      Fix '-tt' option printing when time > 2106-02-07T06:28:15Z.
      Add sub-second packet timestamp checks for invalid micro/nano.
      Remove unused missing/snprintf.c.
      Fix incompatible pointer types with time functions calls on Windows.
      Use C99 macros to define 64-bit constants and maximum 64-bit values.
    Windows:
      Fixed to find wpcap.dll if WinPcap isn't installed and Npcap was
        installed without the WinPcap API compatibility option. (GitHub
        issue #1226).
    Building and testing:
      Makefile.in: Use a local libpcap in the releasecheck target.
      CMake: Fix build with CMake 3.31.
      autotools, CMake: don't separately test whether snprintf(3) is
        available and whether it's suitable - the test for whether it's
        suitable also fails if it's unavailable.